--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
-h1{
-  color:#009EEB;
+h2 {
+  display: inline-block;
+  border-bottom: 1px solid #fff;
+}
+
+article {
+  padding: 0.5em 0;
+}
+
+ul {
+  display: flex;
+  gap: 0.5em;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+ul li a,
+ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.25em;
+  background-color: #e9e9e9;
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  color: #222;
+}
+
+ul li a:hover {
+  color: #23a5d9;
+  text-decoration: none;
+}
+
+ul li a:hover box-icon {
+  color: #23a5d9;
+}
+
+box-icon {
+  color: #222;
+}
+
+footer {
+  width: 100%;
+  height: min-content;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  color: #222;
+  background-color: #d9c5b4;
+}
+
+footer p {
+  margin: auto;
 }
